Prevent the contact from from growing too wide

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -195,6 +195,7 @@ form {
     -webkit-border-radius: 1em;
     -moz-border-radius: 1em;
     border-radius: 1em;
+    max-width: 35em;
 }
 
 form div + div {
